Add a FunctionMapper and use ufficial gmp names.